tests/fails/attrload3.t
terra f(x : &int)
  terralib.attrload(x, {align = "asdf"})
end
f:compile()
